z-index fixed

--- a/assets/product-features.css
+++ b/assets/product-features.css
@@ -99,9 +99,7 @@
         padding-top: 100px;
     }
 
-    .product-features .inner-container{
-        position: relative;
-        z-index: 10;
+    .product-features .inner-container { 
         margin: auto;
         text-align: center;
         margin-bottom: 20px;
